@@ -29,10 +29,17 @@ import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoFactory;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoUtils;
 
 /**
- * The class implements the method resolution for operators like (+, -, *, /, %, |, &, ^). The
- * resolution logic is as follows:
- * 1. The resolver first tries to find an exact parameter match.
- * 2. If 1 fails then it returns the evaluate(Double, Double) method.
+ * The class implements the method resolution for operators like 
+ * (+, -, *, %). The resolution logic is as follows:
+ * 
+ * 1. If one of the parameters is a string, then it resolves to
+ *    evaluate(double, double)
+ * 2. If one of the parameters is null, then it resolves to evaluate(T, T)
+ *    where T is the other non-null parameter type.
+ * 3. If both of the parameters are null, then it resolves to 
+ *    evaluate(byte, byte)
+ * 4. Otherwise, it resolves to evaluate(T, T), where T is the type resulting
+ *    from calling FunctionRegistry.getCommonClass() on the two arguments.
  */
 public class NumericOpMethodResolver implements UDFMethodResolver {
 
@@ -53,27 +60,44 @@ public class NumericOpMethodResolver implements UDFMethodResolver {
    */
   @Override
   public Method getEvalMethod(List<TypeInfo> argTypeInfos)
-  throws AmbiguousMethodException {
+  throws AmbiguousMethodException, UDFArgumentException {
     assert(argTypeInfos.size() == 2);
 
     List<TypeInfo> pTypeInfos = null;
-    if (argTypeInfos.get(0).equals(TypeInfoFactory.voidTypeInfo) ||
-        argTypeInfos.get(1).equals(TypeInfoFactory.voidTypeInfo)) {
-      pTypeInfos = new ArrayList<TypeInfo>();
-      pTypeInfos.add(TypeInfoFactory.doubleTypeInfo);
-      pTypeInfos.add(TypeInfoFactory.doubleTypeInfo);      
-    } else if (argTypeInfos.get(0).equals(TypeInfoFactory.stringTypeInfo) ||
+    List<TypeInfo> modArgTypeInfos = new ArrayList<TypeInfo>();
+
+    // If either argument is a string, we convert to a double because a number
+    // in string form should always be convertible into a double
+    if (argTypeInfos.get(0).equals(TypeInfoFactory.stringTypeInfo) ||
         argTypeInfos.get(1).equals(TypeInfoFactory.stringTypeInfo) ) {
-      pTypeInfos = new ArrayList<TypeInfo>();
-      pTypeInfos.add(TypeInfoFactory.doubleTypeInfo);
-      pTypeInfos.add(TypeInfoFactory.doubleTypeInfo);
-    } else if (argTypeInfos.get(0) == argTypeInfos.get(1)) {
-      pTypeInfos = argTypeInfos;
+      modArgTypeInfos.add(TypeInfoFactory.doubleTypeInfo);
+      modArgTypeInfos.add(TypeInfoFactory.doubleTypeInfo);
     } else {
-      pTypeInfos = new ArrayList<TypeInfo>();
-      pTypeInfos.add(TypeInfoFactory.doubleTypeInfo);
-      pTypeInfos.add(TypeInfoFactory.doubleTypeInfo);
+      // If it's a void, we change the type to a byte because once the types
+      // are run through getCommonClass(), a byte and any other type T will
+      // resolve to type T
+      for(int i=0; i<2; i++) {
+        if(argTypeInfos.get(i).equals(TypeInfoFactory.voidTypeInfo)) {
+          modArgTypeInfos.add(TypeInfoFactory.byteTypeInfo); 
+        } else {
+          modArgTypeInfos.add(argTypeInfos.get(i));
+        }
+      }
     }
+    
+    TypeInfo commonType = FunctionRegistry.getCommonClass(
+        modArgTypeInfos.get(0), 
+        modArgTypeInfos.get(1));
+    
+    if(commonType == null) {
+      throw new UDFArgumentException("Unable to find a common class between" +
+      		"types " + modArgTypeInfos.get(0).getTypeName() + 
+      		" and " + modArgTypeInfos.get(1).getTypeName());
+    }
+    
+    pTypeInfos = new ArrayList<TypeInfo>();
+    pTypeInfos.add(commonType);
+    pTypeInfos.add(commonType);
 
     Method udfMethod = null;
 
